# SciEng

./: .cvsignore  .hgignore  CMakeLists.txt  Errata  Makefile  README  README_cad  SciEng.mkdefs  SciEng.mkdefs-Darwin-x86_64-clang  SciEng.mkdefs-Darwin-x86_64-gcc  SciEng.mkdefs-Linux  SciEng.mkdefs-Linux-i686-gcc  SciEng.mkdefs-Linux-i686-icc  SciEng.mkdefs-Linux-ia64-icc  SciEng.mkdefs-Linux-x86_64-gcc  SciEng.mkdefs-Linux-x86_64-icc  SciEng.mkdefs-Linux-x86_64-icc_11.1  SciEng.mkdefs-Linux-x86_64-icc_12.1
.github/: CODEOWNERS
Algebra/: .cvsignore  AbelianGroupCategory.h  AbelianMonoidCategory.h  AbelianSemiGroupCategory.h  AlgebraWithUnitCategory.h  BuiltinInverse.h  CMakeLists.txt  ComplexFloat.C  ComplexFloat.h  DivisionAlgebraCategory.h  EquivalentToCategory.h  ExternalScalarsCategory.h  FieldCategory.h  FieldScalarsCategory.h  GroupCommon.c  GroupCommon.h  LeftScalarsCategory.h  LinearAlgebraCategory.h  LinearSpaceCategory.h  MetricSpaceCategory.h  MonoidCategory.h  MonoidCommon.c  MonoidCommon.h  NonNegative.h  Positive.h  RingCategory.h  RingWithUnitCategory.h  SemiGroupCategory.h  SemiGroupCommon.c  SemiGroupCommon.h  SubDomain.c  SubDomain.h  TranscendentalFunctionCategory.h
Array/: AccessedArray1d.h  AccessedArray2d.h  Array1d.c  Array1d.h  Array2d.c  Array2d.h  Array3d.c  Array3d.h  ArrayCheck.c  ArrayCheck.h  ArrayIterator1d.h  ArrayIterator2d.h  ArrayIterator3d.h  ArrayShape.C  ArrayShape.h  ArrayTuplize.c  ArrayTuplize.h  CMakeLists.txt  ConcreteArray1d.c  ConcreteArray1d.h  ConcreteArray1dUtil.c  ConcreteArray1dUtil.h  ConcreteArray2d.c  (+52 more)
(+699 files in other folders)
